# VKR-ParkingSystem

./: .gitignore  MACOS_CLI.md  README.md  SETUP_RU.md  WINDOWS_CLI.md  irs.cmd  irs.ps1  irs.sh  package.json
parking-analytics/: app.py  backend_client.py  detector.py  draw_roi.py  known_plates.txt  main.py  parking_spaces.json  pyproject.toml  run_analytics.py  run_headless.py  video_paths.py
parking-analytics/tests/: test_detector.py
parking-api/: .env.example  package-lock.json  package.json
parking-api/src/: backendClient.js  index.js  store.js
parking-api/src/middleware/: auth.js
parking-api/src/routes/: auth.js  parking.js
parking-app/: index.html  package-lock.json  package.json  vite.config.ts
parking-app/public/: index.html
parking-app/src/: App.vue  style.css
parking-app/src/api/: auth.ts  parking.ts
parking-app/src/components/: AccountAuthCard.vue  Map.vue  MapView.vue  Navbar.vue  OperationDetailsModal.vue  ParkingDetailsModal.vue  ParkingFilters.vue  ParkingList.vue  RegisterModal.vue
parking-app/src/types/: parking.ts
parking-app/src/utils/: favorites.ts  spbParkingStyle.ts
parking-app/src/views/: MapPage.vue  OperationHistoryPage.vue  ParkingHistoryPage.vue  ParkingPage.vue  ProfilePage.vue
parking-app/vite-plugins/: parkingApiDev.ts
parking-backend/: database.py  main.py  pyproject.toml  requirements.txt
