[project]
name = "parking-backend"
version = "0.1.0"
description = "FastAPI backend for IRS parking sessions"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.12",
]

[project.scripts]
parking-backend-init-db = "database:init_db"

[tool.hatch.build.targets.wheel]
only-include = ["database.py", "main.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
